--- a/Android/BooYa/res/values/strings.xml
+++ b/Android/BooYa/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="booya_board">BooYa Board</string>
     <string name="stuff">Stuff</string>
     <string name="stats">Stats</string>
+    <string name="deactivate">Deactivate</string>
 </resources>
